--- a/nginx_backend/html/index.html
+++ b/nginx_backend/html/index.html
@@ -1,1 +1,1 @@
-<html><body><h1>Backend 2</h1><p>This is another vulnerable backend server</p></body></html>
+<html><body><h1>Backend 1</h1><p>This is a vulnerable backend server</p></body></html>
